--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "expo": "^20.0.0",
     "lodash.clonedeep": "^4.5.0",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
     "react-navigation": "^1.0.0-beta.11"
