--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "devtools": "react-devtools"
   },
   "jest": {
     "preset": "jest-expo"
@@ -24,6 +25,7 @@
     "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
+    "react-native-elements": "^0.17.0",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
